2005-10-31  Paul Eggert  <eggert@cs.ucla.edu>

	* Version 6.0-cvs.

	* src/dd.c (skip): Fix off-by-one error reported by
	Theodoros V. Kalamatianos.

2005-10-30  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/mkdir/p-3: Require that the test be run as non-root.
	Problem and trivial fix reported by Theodoros V. Kalamatianos.

2005-10-28  Paul Eggert  <eggert@cs.ucla.edu>

	* src/ln.c (FILE_BASENAME_CONCAT): Omit unnecessary slashes in the
	boundary between DEST and SOURCE in the result.

2005-10-26  Dmitry V. Levin  <ldv@altlinux.org>

	* src/md5sum.c (main) [!O_BINARY]: Changed default read mode
	back to text, to sync with documentation and for backwards
	compatibility.

2005-10-25  Jim Meyering  <jim@meyering.net>

	* tests/dircolors/simple (other-wr): Add an explicit test for
	the dircolors bug (NULL-dereference) fixed yesterday.

2005-10-24  Jim Meyering  <jim@meyering.net>

	* src/tac.c (tac_file): When determining whether a file is seekable,
	also test whether it is a tty.  Using only the lseek-based test would
	give a false positive on Solaris.  Reported by Peter Fales.

2005-10-24  Dmitry V. Levin  <ldv@altlinux.org>

	* tests/install/d-slashdot: New test, for "install -d" failure.
	* tests/install/Makefile.am (TESTS): Add d-slashdot.
	* tests/mkdir/p-slashdot: New test, for "mkdir -p" failure.
	* tests/mkdir/Makefile.am (TESTS): Add p-slashdot.

2005-10-24  Jim Meyering  <jim@meyering.net>

	* src/dircolors.c (ls_codes): Add missing comma.
	Anonymous report and patch from
	http://savannah.gnu.org/bugs/?func=detailitem&item_id=14849

	* src/dircolors.c: Add compile-time assertion that the slack_codes
	and ls_codes arrays have the same number of elements.  This would
	have prevented the above-fixed bug.

	* src/expand.c (parse_tab_stops): Add a comment to make this function
	identical to the one in unexpand.c.
	* src/unexpand.c (parse_tab_stops): Adjust syntax to make this function
	identical to the one in expand.c.
