@@ -1,3 +1,8 @@
+2005-11-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* coreutils.texi (tail invocation): Describe obsolete usages
+	like "tail -2" more precisely.
+
 2005-08-28  David Madore  <david.madore@ens.fr>
 
 	* coreutils.texi: Document SHA-1 and SHA-2 utilities.
